syntax = "proto3";
package kv_service;

/* -------------------------------------------------------------------- */
message PingRequest {
  uint64 version = 1;
  bytes body = 2;
}

message PingResponse {
  uint64 version = 1;
  bytes body = 2;
}

/* -------------------------------------------------------------------- */
message Meta {
  string tenant = 1;
  optional string user = 2;
  optional string password = 3;
}

message WritePointsRequest {
  uint64 version = 1;
  Meta meta = 2;
  bytes points = 3; // flatbuffers bytes ( models::Points )
}

message WritePointsResponse {
  uint64 points_number = 1;
}

/* -------------------------------------------------------------------- */
message FileInfo {
    string md5 = 1;
    string name = 2;
    uint64 size = 3;
}

message GetVnodeFilesMetaRequest {
    string tenant = 1;
    string db = 2;
    uint32 vnode_id = 3;
}

message GetVnodeFilesMetaResponse {
    string path = 1;
    repeated FileInfo infos = 2;
}

/* -------------------------------------------------------------------- */
message StatusResponse {
  int32 code = 1;
  string data = 2;
}

message DropDBRequest {
    string db = 1;
}

message DropTableRequest {
    string db = 1;
    string table = 2;
}

message DeleteVnodeRequest {
    string db = 1;
    uint32 vnode_id = 2;
}

message CopyVnodeRequest {
    uint32 vnode_id = 1;
}

message MoveVnodeRequest {
    uint32 vnode_id = 1;
}

message CompactVnodeRequest {
    repeated uint32 vnode_ids = 1;
}

message DropColumnRequest {
    string db = 1;
    string table = 2;
    string column = 3;
}

message AddColumnRequest {
    string db = 1;
    string table = 2;
    bytes column = 3;
}

message AlterColumnRequest {
    string db = 1;
    string table = 2;
    string name = 3;
    bytes column = 4;
}

message RenameColumnRequest {
    string db = 1;
    string table = 2;
    string old_name = 3;
    string new_name = 4;
}

message AdminCommandRequest {
  string tenant = 1;
  oneof command {
    DropDBRequest drop_db = 2;
    DropTableRequest drop_tab = 3;
    DeleteVnodeRequest del_vnode = 4;
    CopyVnodeRequest copy_vnode = 5;
    MoveVnodeRequest move_vnode  = 6;
    CompactVnodeRequest compact_vnode = 7;
    DropColumnRequest drop_column = 8;
    AddColumnRequest add_column = 9;
    AlterColumnRequest alter_column = 10;
    RenameColumnRequest rename_column = 11;
  }
}

message FetchVnodeChecksumRequest {
    uint32 vnode_id = 1;
}

message AdminFetchCommandRequest {
  string tenant = 1;
  oneof command {
    FetchVnodeChecksumRequest fetch_vnode_checksum = 8;
  }
}

/* -------------------------------------------------------------------- */

message BatchBytesResponse {
  int32 code = 1;
  bytes data = 2;
}

message DownloadFileRequest {
    string tenant = 1;
    string db = 2;
    uint32 vnode_id = 3;
    string filename = 4;
}

message FetchVnodeSummaryRequest {
    string tenant = 1;
    string database = 2;
    uint32 vnode_id = 3;
}

message QueryRecordBatchRequest {
    bytes args = 1;
    bytes expr = 2;
    bytes aggs = 3;
}

message WriteVnodeRequest {
    uint32 vnode_id = 1;
    string tenant =2;
    uint32 precision = 3;
    bytes data = 4;
}

message OpenRaftNodeRequest {
    string tenant = 1;
    uint32 vnode_id = 2;
    uint32 replica_id = 3;
}

message DropRaftNodeRequest {
    string tenant = 1;
    uint32 vnode_id = 2;
    uint32 replica_id = 3;
}

message WriteReplicaRequest {
    uint32 replica_id = 1;
    string tenant = 2;
    string db_name = 3;
    uint32 precision = 4;
    bytes data = 5;
}


/* -------------------------------------------------------------------- */
service TSKVService {
  rpc Ping(PingRequest) returns (PingResponse) {};
  rpc WritePoints(stream WritePointsRequest) returns (stream WritePointsResponse) {};

  rpc WriteVnodePoints(WriteVnodeRequest) returns (StatusResponse) {};
  rpc WriteReplicaPoints(WriteReplicaRequest) returns (StatusResponse) {};
  rpc QueryRecordBatch(QueryRecordBatchRequest) returns (stream BatchBytesResponse) {};
  rpc ExecAdminCommand(AdminCommandRequest) returns (StatusResponse) {};
  rpc ExecAdminFetchCommand(AdminFetchCommandRequest) returns (BatchBytesResponse) {};
  rpc ExecOpenRaftNode(OpenRaftNodeRequest) returns (StatusResponse) {};
  rpc ExecDropRaftNode(DropRaftNodeRequest) returns (StatusResponse) {};

  rpc DownloadFile(DownloadFileRequest) returns (stream BatchBytesResponse) {};
  rpc GetVnodeFilesMeta(GetVnodeFilesMetaRequest) returns (GetVnodeFilesMetaResponse) {};
  rpc FetchVnodeSummary(FetchVnodeSummaryRequest) returns (BatchBytesResponse) {};
  rpc TagScan(QueryRecordBatchRequest) returns (stream BatchBytesResponse) {};
}
